登录相关功能

--- a/templates/administrator/base.html
+++ b/templates/administrator/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../../static/css/RightBar.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Administrator.css">
 
+    <script src="../../static/js/roles/admin.js"></script>
     <script type="text/javascript" src="../../static/js/Schedule.js"></script>
 </head>
 
@@ -195,5 +196,5 @@
             </div>
         </div>
 </body>
-
+<script src="../static/js/auth/session.js"></script>
 </html>
