--- a/templates/counselor/base.html
+++ b/templates/counselor/base.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="../../static/css/Records.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Modal.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Counsel.css">
+
+    <script src="../../static/js/roles/counselor.js"></script>
     <script type="text/javascript" src="../../static/js/Schedule.js"></script>
 </head>
 
@@ -184,5 +186,5 @@
 </body>
 <script type="text/javascript" src="../../static/js/sessionListDelete.js"></script>
 <script type="text/javascript" src="../../static/js/recentlyCompletedCounsel.js"></script>
-
+<script src="../static/js/auth/session.js"></script>
 </html>
