--- a/templates/supervisor/base.html
+++ b/templates/supervisor/base.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="../../static/css/Schedule.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Records.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Supervisor.css">
+
+    <script src="../../static/js/roles/supervisor.js"></script>
     <script type="text/javascript" src="../../static/js/Schedule.js"></script>
 </head>
 
@@ -199,4 +201,5 @@
     </div>
 </body>
 <script type="text/javascript" src="../../static/js/recentlyCompletedAssistance.js"></script>
+<script src="../static/js/auth/session.js"></script>
 </html>
