--- a/static/css/RightBar.css
+++ b/static/css/RightBar.css
@@ -14,6 +14,14 @@
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin-right: 1.5rem;
+    text-align: center;
+}
+
+.logo img{
+    width: 35px;
+    height: 35px;
+    min-width: 35px;
+    min-height: 35px;
 }
 
 .infoBar {
