--- a/templates/administrator/counselorManagement.html
+++ b/templates/administrator/counselorManagement.html
@@ -101,14 +101,14 @@
                     <div class="records-table">
                         <!-- 表头 -->
                         <div class="table-header">
-                            <div>姓名</div>
-                            <div>身份</div>
-                            <div>绑定督导</div>
-                            <div>总咨询数</div>
-                            <div>咨询总时长</div>
-                            <div>平均咨询评级</div>
-                            <div>周值班安排</div>
-                            <div>操作</div>
+                            <div><i class="fas fa-user"></i>姓名</div>
+                            <div><i class="fas fa-hospital-user"></i>身份</div>
+                            <div><i class="fas fa-user-tie"></i>绑定督导</div>
+                            <div><i class="fas fa-file"></i>总咨询数</div>
+                            <div><i class="fas fa-clock"></i>咨询总时长</div>
+                            <div><i class="fas fa-grin-stars"></i>平均咨询评级</div>
+                            <div><i class="fas fa-calendar-week"></i>周值班安排</div>
+                            <div><i class="fas fa-th-large"></i>操作</div>
                         </div>
 
                         <!-- 数据行 -->
