--- a/templates/administrator/history.html
+++ b/templates/administrator/history.html
@@ -81,7 +81,7 @@
                 <div class="search-container">
                     <!-- 姓名搜索下拉 -->
                     <div class="search-group">
-                      <label class="search-label">搜索姓名</label>
+                      <label class="search-label"><i class="fas fa-search"></i>搜索姓名</label>
                       <select class="search-select">
                         <option value="" disabled selected>输入姓名进行搜索</option>
                         <option>张三</option>
