--- a/templates/administrator/supervisorManagement.html
+++ b/templates/administrator/supervisorManagement.html
@@ -100,13 +100,13 @@
                     <div class="records-table">
                         <!-- 表头 -->
                         <div class="table-header">
-                            <div>姓名</div>
-                            <div>身份</div>
-                            <div>绑定咨询师</div>
-                            <div>总咨督导次数</div>
-                            <div>督导总时长</div>
-                            <div>周值班安排</div>
-                            <div>操作</div>
+                            <div><i class="fas fa-user"></i>姓名</div>
+                            <div><i class="fas fa-hospital-user"></i>身份</div>
+                            <div><i class="fas fa-user-graduate"></i>绑定咨询师</div>
+                            <div><i class="fas fa-file"></i>总咨督导次数</div>
+                            <div><i class="fas fa-clock"></i>督导总时长</div>
+                            <div><i class="fas fa-calendar-week"></i>周值班安排</div>
+                            <div><i class="fas fa-th-large"></i>操作</div>
                         </div>
 
                         <!-- 数据行 -->
