--- a/templates/supervisor/history.html
+++ b/templates/supervisor/history.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../../static/css/Records.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Modal.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Counsel.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script type="text/javascript" src="../../static/js/Schedule.js"></script>
 </head>
 
@@ -85,7 +86,7 @@
                 <div class="search-container">
                     <!-- 姓名搜索下拉 -->
                     <div class="search-group">
-                      <label class="search-label">搜索姓名</label>
+                      <label class="search-label"><i class="fas fa-search"></i> 搜索姓名</label>
                       <select class="search-select">
                         <option value="" disabled selected>输入姓名进行搜索</option>
                         <option>张三</option>
@@ -96,7 +97,7 @@
                   
                     <!-- 日期选择下拉 -->
                     <div class="search-group">
-                      <label class="search-label">选择日期</label>
+                      <label class="search-label"><i class="fas fa-calendar-day"></i>选择日期</label>
                       <div class="date-picker">
                         <input type="date" class="date-input" placeholder="请选择日期">
                       </div>
@@ -110,10 +111,10 @@
                         <!-- 表头 -->
                         <div class="table-header">
                             
-                            <div>咨询师</div>
-                            <div>求助时长</div>
-                            <div>求助日期</div>
-                            <div>操作</div>
+                            <div><i class="fas fa-user-circle"></i>咨询师</div>
+                            <div><i class="fas fa-clock"></i>求助时长</div>
+                            <div><i class="fas fa-calendar-check"></i>求助日期</div>
+                            <div><i class="fas fa-th-large"></i>操作</div>
                         </div>
 
    
