--- a/templates/counselor/history.html
+++ b/templates/counselor/history.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../../static/css/Records.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Counsel.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Modal.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body style="display: flex;">
@@ -72,7 +73,7 @@
                 <div class="search-container">
                     <!-- 姓名搜索下拉 -->
                     <div class="search-group">
-                      <label class="search-label">搜索姓名</label>
+                      <label class="search-label"><i class="fas fa-search"></i> 搜索姓名</label>
                       <select class="search-select">
                         <option value="" disabled selected>输入姓名进行搜索</option>
                         <option>张三</option>
@@ -83,7 +84,7 @@
                   
                     <!-- 日期选择下拉 -->
                     <div class="search-group">
-                      <label class="search-label">选择日期</label>
+                      <label class="search-label"><i class="fas fa-calendar-day"></i>选择日期</label>
                       <div class="date-picker">
                         <input type="date" class="date-input" placeholder="请选择日期">
                       </div>
@@ -96,11 +97,11 @@
                     <div class="records-table">
                         <!-- 表头 -->
                         <div class="table-header">
-                            <div>咨询人</div>
-                            <div>咨询时长</div>
-                            <div>咨询日期</div>
-                            <div>咨询评级</div>
-                            <div>操作</div>
+                            <div><i class="fas fa-user-circle"></i>咨询人</div>
+                            <div><i class="fas fa-clock"></i>咨询时长</div>
+                            <div><i class="fas fa-calendar-check"></i>咨询日期</div>
+                            <div><i class="fas fa-grin-stars"></i>咨询评级</div>
+                            <div><i class="fas fa-th-large"></i>操作</div>
                         </div>
 
 
