--- a/templates/administrator/schedule.html
+++ b/templates/administrator/schedule.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" type="text/css" href="../../static/css/Records.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Supervisor.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Modal.css">
-    <script type="text/javascript" src="../../static/js/generalSchedule.js"></script>
-    <script type="text/javascript" src="../../static/js/ScheduleInfomation.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script type="text/javascript" src="../../static/js/schedule/admin_schedule.js"></script>
+    
 </head>
 
 <body style="display: flex;">
@@ -33,35 +34,35 @@
             <div class="nav-menu">
                 <div class="nav-item">
                     <img src="../../static/image/homepageGrey.png">
-                    <a href="base.html" class="nav-link">
+                    <a href="/admin/base" class="nav-link">
                         <span class="leftOption" id="Option_bed_information">首页</span>
                     </a>
                 </div>
 
                 <div class="nav-item">
                     <img src="../../static/image/logGrey.png">
-                    <a href="history.html" class="nav-link">
+                    <a href="/admin/history" class="nav-link">
                         <span class="leftOption" id="Option_bed_information">咨询记录</span>
                     </a>
                 </div>
 
                 <div class="nav-item-activate">
                     <img src="../../static/image/scheduleGreen.png">
-                    <a href="schedule.html" class="nav-link">
+                    <a href="/admin/schedule" class="nav-link">
                         <span class="leftOption" id="Option_bed_information">排班表</span>
                     </a>
                 </div>
 
                 <div class="nav-item">
                     <img src="../../static/image/counselorGrey.png">
-                    <a href="counselorManagement.html" class="nav-link">
+                    <a href="/admin/counselorManagement" class="nav-link">
                         <span class="leftOption" id="Option_bed_information">咨询师管理</span>
                     </a>
                 </div>
 
                 <div class="nav-item">
                     <img src="../../static/image/supervisorGrey.png">
-                    <a href="supervisorManagement.html" class="nav-link">
+                    <a href="/admin/supervisorManagement" class="nav-link">
                         <span class="leftOption" id="Option_bed_information">督导管理</span>
                     </a>
                 </div>
