--- a/templates/counselor/counsel.html
+++ b/templates/counselor/counsel.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../../static/css/RightBar.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Counsel.css">
     <link rel="stylesheet" type="text/css" href="../../static/css/Modal.css">
+    
 </head>
 
 <body style="display: flex;">
@@ -30,13 +31,13 @@
             <div class="nav-menu">
                 <div class="nav-item">
                     <img src="../../static/image/homepageGrey.png">
-                    <a href="base.html" class="nav-link">
+                    <a href="/counselor/base" class="nav-link">
                         <span class="leftOption" id="Option_bed_information">首页</span>
                     </a>
                 </div>
                 <div class="nav-item">
                     <img src="../../static/image/logGrey.png">
-                    <a href="history.html" class="nav-link">
+                    <a href="/counselor/history" class="nav-link">
                         <span class="leftOption" id="Option_bed_information">咨询记录</span>
                     </a>
                 </div>
@@ -382,5 +383,6 @@
 
 </body>
 <script type="text/javascript" src="../../static/js/consultantDuration.js"></script>
-<script type="text/javascript" src="../../static/js/Chat.js"></script>
+<script type="module" src="../../static/js/Chat.js"></script>
+
 </html>
