--- a/templates/counselor/history.html
+++ b/templates/counselor/history.html
@@ -32,13 +32,13 @@
             <div class="nav-menu">
                 <div class="nav-item">
                     <img src="../../static/image/homepageGrey.png">
-                    <a href="base.html" class="nav-link">
+                    <a href="/counselor/base" class="nav-link">
                         <span class="leftOption" id="Option_bed_information">首页</span>
                     </a>
                 </div>
                 <div class="nav-item-activate">
                     <img src="../../static/image/logGreen.png">
-                    <a href="history.html" class="nav-link">
+                    <a href="/counselor/history" class="nav-link">
                         <span class="leftOption" id="Option_bed_information">咨询记录</span>
                     </a>
                 </div>
