--- a/static/css/RightBar.css
+++ b/static/css/RightBar.css
@@ -104,7 +104,7 @@ h2{
 }
 
 .completedcounsel::after {
-    content: "12353";
+    content: attr(data-value);
     font-size: 2.8rem;
     font-weight: 600;
 }
@@ -133,20 +133,10 @@ h2{
     font-weight: 600;
     color: #4a9cff;
     margin-top: 10px;
-    
+    content: attr(data-value);
 }
 
-.currentStatus:nth-child(1)::after {
-    content: "35";
-}
 
-.currentStatus:nth-child(2)::after {
-    content: "6:12:30";
-}
-
-.currentStatus:nth-child(3)::after {
-    content: "2";
-}
 
 /* 状态标签样式 */
 .currentStatus span {
