--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
         </div>
         
         <div class="modal-button-line">
-          <button type="submit" class="modal-btn primary">登录</button>
+          <button type="submit" class="modal-btn primary" onclick="login_submit()">登录</button>
           <button type="reset" class="modal-btn secondary">重置</button>
         </div>
       </form>
@@ -51,8 +51,9 @@
       <button class="modal-btn" onclick="closeError()">确定</button>
     </div>
   </div>
-
-  <script src="../static/js/login.js"></script>
+  
+  <script  src="../static/js/login.js"></script>
+  
 </body>
 
 </html>
