--- a/templates/supervisor/schedule.html
+++ b/templates/supervisor/schedule.html
@@ -31,7 +31,7 @@
             <div class="nav-menu">
                 <div class="nav-item">
                     <img src="../../static/image/homepageGrey.png">
-                    <a href="base.html" class="nav-link">
+                    <a href="/supervisor/base" class="nav-link">
                         <span class="leftOption" id="Option_bed_information">首页</span>
                     </a>
                 </div>
@@ -42,14 +42,14 @@
 
                 <div class="nav-item-activate">
                     <img src="../../static/image/scheduleGreen.png">
-                    <a href="schedule.html" class="nav-link">
+                    <a href="/supervisor/schedule" class="nav-link">
                         <span class="leftOption" id="Option_bed_information">排班表</span>
                     </a>
                 </div>
 
                 <div class="nav-item">
                     <img src="../../static/image/logGrey.png">
-                    <a href="history.html" class="nav-link">
+                    <a href="/supervisor/history" class="nav-link">
                         <span class="leftOption" id="Option_bed_information">咨询记录</span>
                     </a>
                 </div>
